<resources>
    <string name="app_name">Kingdom Builder</string>
    <string name="economy">Economy</string>
    <string name="loyalty">Loyalty</string>
    <string name="stability">Stability</string>
    <string name="unrest">Unrest</string>
    <string name="consumption">Consumption</string>
    <string name="treasury">Treasury</string>
    <string name="size">Size</string>
    <string name="income">Income</string>
    <string name="month">Month %d</string>
    <string name="discard">Discard item?</string>
    <string name="backup_error">Could not create backup</string>
    <string name="backup_success">Backup created</string>
    <string name="restore_error">Could not restore backup</string>
    <string name="restore_success">Backup restored</string>
</resources>
