<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="de.klimek.kingdombuilder.ui.stats.StatsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".ui.stats.StatsFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/economy_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/economy_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{vm.enabled}"
                    android:hint="@string/economy"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:text="@={vm.economy}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loyalty_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loyalty_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{vm.enabled}"
                    android:hint="@string/loyalty"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:text="@={vm.loyalty}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stability_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stability_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{vm.enabled}"
                    android:hint="@string/stability"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:text="@={vm.stability}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/unrest_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/unrest_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{vm.enabled}"
                    android:hint="@string/unrest"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:text="@={vm.unrest}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/consumption_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consumption_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{vm.enabled}"
                    android:hint="@string/consumption"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:text="@={vm.consumption}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/treasury_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/treasury_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{vm.enabled}"
                    android:hint="@string/treasury"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:text="@={vm.treasury}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/size_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/size_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{vm.enabled}"
                    android:hint="@string/size"
                    android:inputType="numberSigned"
                    android:maxLength="3"
                    android:text="@={vm.size}" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</layout>